--- a/glean_parser/templates/go_server.jinja2
+++ b/glean_parser/templates/go_server.jinja2
@@ -20,6 +20,7 @@ var gleanEventMozlogType string = "glean-server-event"
 
 // interface to send the log messages, accepting a call passing in the eventType and the message.
 // TODO: confirm what calls to cloud logging would be required to see if the log method signature makes sense
+// TODO: confirm if this should depend on https://github.com/mozilla-services/go-mozlog
 type Logger interface {
 	log(eventType string, message string)
 }
@@ -31,7 +32,7 @@ type GleanEventsLogger struct {
 	Logger            Logger
 }
 
-// exported types for public method parameters
+// exported type for public method parameters
 type RequestInfo struct {
 	UserAgent string
 	IpAddress string
@@ -163,14 +164,14 @@ type {{ ping|ping_type_name }} struct {
   {% for metric_type, metrics in metrics_by_type.items() %}
   {% if metric_type != 'event' %}
   {% for metric in metrics %}
-  {{ metric|metric_argument_name }} {{ metric|go_metric_type }}
+  {{ metric|metric_argument_name }} {{ metric.type|go_metric_type }} // {{ metric.description|clean_string }}
   {% endfor %}
   {% endif %}
   {% endfor %}
-	// should custom pings also support including any event metric?
+	{# TODO: if custom pings need to support including any event metric #}
 }
 
-// public methods for recording custom pings
+// Record and submit a {{ ping|ping_type_name }} custon Ping
 func (g GleanEventsLogger) Record{{ ping|ping_type_name }}(
 	requestInfo RequestInfo,
 	params {{ ping|ping_type_name }},
@@ -190,7 +191,7 @@ func (g GleanEventsLogger) Record{{ ping|ping_type_name }}(
 	g.record("{{ ping }}", requestInfo, metrics, events)
 }
 
-// convenience function is user request info is not desired
+// Record and submit a {{ ping|ping_type_name }} custon Ping omitting user request info
 func (g GleanEventsLogger) Record{{ ping|ping_type_name }}WithoutUserInfo(
 	params {{ ping|ping_type_name }},
 ) {
@@ -200,25 +201,24 @@ func (g GleanEventsLogger) Record{{ ping|ping_type_name }}WithoutUserInfo(
 {% endif %}
 {% endfor %}
 {% if event_metric_exists %}
+{# methods for sending individual event metrics #}
 {% for ping, metrics_by_type in pings.items() %}
 {% for event in metrics_by_type["event"] %}
 type {{ event|event_type_name }} struct {
-	CommonParam1 string
-	EventParam1  string
-	EventParam2  string
   {% for metric_type, metrics in metrics_by_type.items() %}
   {% if metric_type != 'event' %}
   {% for metric in metrics %}
-  {{ metric|metric_argument_name }} {{ metric|go_metric_type }}
+  {{ metric|metric_argument_name }} {{ metric.type|go_metric_type }} // {{ metric.description|clean_string }}
   {% endfor %}
   {% endif %}
   {% endfor %}
   {% for extra, metadata in event.extra_keys.items() %}
-  {{ extra|event_extra_name }} {{ metadata.type }}
+  {{ extra|event_extra_name }} {{ metadata.type|go_metric_type }} // {{ metadata.description|clean_string }}
   {% endfor %}
 }
 
-// public methods for recording events
+// Record and submit an {{ event|event_type_name }} event.
+// {{ event.description|clean_string }}
 func (g GleanEventsLogger) Record{{ event|event_type_name }}(
 	requestInfo RequestInfo,
 	params {{ event|event_type_name }},
@@ -250,7 +250,8 @@ func (g GleanEventsLogger) Record{{ event|event_type_name }}(
 	g.record("events", requestInfo, metrics, events)
 }
 
-// convenience function is user request info is not desired
+// Record and submit an {{ event|event_type_name }} event omitting user request info
+// {{ event.description|clean_string }}
 func (g GleanEventsLogger) Record{{ event|event_type_name }}WithoutUserInfo(
   params {{ event|event_type_name }},
 ) {
